--- a/Windows-10-сборки.html
+++ b/Windows-10-сборки.html
@@ -62,6 +62,7 @@
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-8-1-сборки.html">Сборки Windows 8.1</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-10-сборки.html">Сборки Windows 10</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-11-сборки.html">Сборки Windows 11</a>
+</li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-Lite-сборки.html">Сборки Windows Lite</a>
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="Содержимое-сборок.html" style="padding: 10px 20px;">Содержимое сборок</a>
@@ -83,6 +84,7 @@
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-8-1-сборки.html">Сборки Windows 8.1</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-10-сборки.html">Сборки Windows 10</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-11-сборки.html">Сборки Windows 11</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-Lite-сборки.html">Сборки Windows Lite</a>
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Содержимое-сборок.html">Содержимое сборок</a>
@@ -109,7 +111,7 @@
         <img class="u-image u-image-default u-image-2" src="images/photo_2022-06-21_21-47-42.jpg" alt="" data-image-width="1280" data-image-height="719">
         <img class="u-image u-image-default u-image-3" src="images/photo_2022-06-21_21-47-43.jpg" alt="" data-image-width="1280" data-image-height="719">
         <img class="u-image u-image-default u-image-4" src="images/photo_2022-06-21_21-47-411.jpg" alt="" data-image-width="1280" data-image-height="719">
-        <p class="u-text u-text-3"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы полезных и авторских программ, а так же рег файлы, чтобы редактировать проводник и вернуть старый просмотрщик фото. <br>А так же, чтобы отключать и включать обновления. <br>
+        <p class="u-text u-text-3"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы полезных и авторских программ, а так же рег файлы, чтобы редактировать проводник и вернуть старый просмотрщик фото, чтобы отключать и включать обновления. <br>
           <br>Удалены приложения "Zune Music, Ваш телефон, Карты, Центр отзывов, Камера, Скайп, Портал смешанной реальности, Люди, Microsoft Office, OneNote, Sticky Notes, Solitaire Collection, 3D Viewer, 3D Paint" <br>
           <br>Интегрированы Microsoft Visual Studio Redistributable 2005, 2008, 2010, 2012, 2013, 2015 - 2022, x86 и x64 <br>
           <br>Интегрированы Framework 4.8, 4.7.2 <br>
@@ -119,13 +121,13 @@
           <br>Образ весит 5.96 GB, после установки Windows занимает 19 GB (стандартная 21H2 занимает 24 GB) <br>
           <br>Образ основан на официальном MSDN Windows 10 21H2 (19044.1288)
         </p>
-        <a href="https://drive.google.com/file/d/1xqrIeZ1BzITOFxtdxBmIS3BUKYaiiAe8/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-1">Скачать Windows 10 21H2 by Adderly</a>
+        <a href="https://drive.google.com/file/d/1xqrIeZ1BzITOFxtdxBmIS3BUKYaiiAe8/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-1" target="_blank">Скачать Windows 10 21H2 by Adderly</a>
         <h6 class="u-text u-text-default u-text-4">Windows 10 1607 by Adderly (22.06.2022)</h6>
         <img class="u-expanded-width-sm u-image u-image-default u-image-5" src="images/photo_2022-06-22_01-25-04.jpg" alt="" data-image-width="1280" data-image-height="719">
         <img class="u-expanded-width-xs u-image u-image-default u-image-6" src="images/photo_2022-06-22_01-25-042.jpg" alt="" data-image-width="1280" data-image-height="719">
         <img class="u-expanded-width-xs u-image u-image-default u-image-7" src="images/photo_2022-06-22_01-25-04.jpg" alt="" data-image-width="1280" data-image-height="719">
         <img class="u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-8" src="images/photo_2022-06-22_01-25-042.jpg" alt="" data-image-width="1280" data-image-height="719">
-        <p class="u-text u-text-default u-text-5"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы полезных и авторских программ, а так же рег файлы, чтобы редактировать проводник и вернуть старый просмотрщик фото. <br>А так же, чтобы отключать и включать обновления. <br>
+        <p class="u-text u-text-default u-text-5"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы полезных и авторских программ, а так же рег файлы, чтобы редактировать проводник и вернуть старый просмотрщик фото, чтобы отключать и включать обновления. <br>
           <br>Удалены все UWP приложения, кроме калькулятора, часов, и фотографий <br>
           <br>Удалён OneDrive и Microsoft Defender из автозагрузки <br>
           <br>Интегрированы Microsoft Visual Studio Redistributable 2005, 2008, 2010, 2012, 2013, 2015 - 2022, x86 и x64 <br>
@@ -136,7 +138,7 @@
           <br>Образ весит 4.66 GB, после установки Windows занимает 10.7 GB <br>
           <br>Образ основан на официальном MSDN Windows 10 1607 (Anniversary Update)
         </p>
-        <a href="https://drive.google.com/file/d/1KKx6f_0_EBnR0iRaWFiJcDYuFoDqBvke/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-2">Скачать Windows 10 1607 by Adderly</a>
+        <a href="https://drive.google.com/file/d/1KKx6f_0_EBnR0iRaWFiJcDYuFoDqBvke/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-2" target="_blank">Скачать Windows 10 1607 by Adderly</a>
         <p class="u-text u-text-default u-text-6">Смотрите так же:</p>
         <a href="Windows-11-сборки.html" data-page-id="54493442" class="u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-3">Сборки Windows 11</a>
         <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-4">Сборки Windows 8.1</a>
