--- a/Windows-11-сборки.html
+++ b/Windows-11-сборки.html
@@ -62,6 +62,7 @@
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-8-1-сборки.html">Сборки Windows 8.1</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-10-сборки.html">Сборки Windows 10</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-11-сборки.html">Сборки Windows 11</a>
+</li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-Lite-сборки.html">Сборки Windows Lite</a>
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="Содержимое-сборок.html" style="padding: 10px 20px;">Содержимое сборок</a>
@@ -83,6 +84,7 @@
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-8-1-сборки.html">Сборки Windows 8.1</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-10-сборки.html">Сборки Windows 10</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-11-сборки.html">Сборки Windows 11</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-Lite-сборки.html">Сборки Windows Lite</a>
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Содержимое-сборок.html">Содержимое сборок</a>
@@ -104,9 +106,8 @@
         <h1 class="u-text u-text-default u-text-1">Сборки Windows 11<br>
         </h1>
         <h1 class="u-align-center u-text u-text-default u-text-2">Уже до конца недели!</h1>
-        <p class="u-text u-text-3"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы полезных и авторских программ,<br>а так же рег файлы, чтобы вернуть старый просмотрщик фото. <br>А так же, чтобы отключать и включать обновления. <br>
-          <br> Очищен WinSXS <br>
-          <br>Удалены из автозагрузки "Security Health Check и One Drive" <br>
+        <p class="u-text u-text-3"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы полезных и авторских программ,<br>а так же рег файлы, чтобы вернуть старый просмотрщик фото и&nbsp;чтобы отключать и включать обновления.&nbsp;<br>
+          <br>Удалены из автозагрузки One Drive<br>
           <br>Удалены приложения<br>"Zune, Your Phone, Xbox Speech To Text, Sound Recorder, Карты,<br>Центр отзывов, Почта, Люди, Камера, Sticky Notes, Microsoft Solitaire Collection,<br>Office Hub, Get Started, Get Help, Погода, Новости, Microsoft To Do"<br>
           <br> Удален OneDrive<br>
           <br>Интегрированы Microsoft Visual Studio Redistributable 2005, 2008, 2010, 2012, 2013, 2015 - 2022, x86 и x64 <br>
