--- a/Windows-8-1-сборки.html
+++ b/Windows-8-1-сборки.html
@@ -62,6 +62,7 @@
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-8-1-сборки.html">Сборки Windows 8.1</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-10-сборки.html">Сборки Windows 10</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-11-сборки.html">Сборки Windows 11</a>
+</li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-Lite-сборки.html">Сборки Windows Lite</a>
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="Содержимое-сборок.html" style="padding: 10px 20px;">Содержимое сборок</a>
@@ -83,6 +84,7 @@
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-8-1-сборки.html">Сборки Windows 8.1</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-10-сборки.html">Сборки Windows 10</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-11-сборки.html">Сборки Windows 11</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-Lite-сборки.html">Сборки Windows Lite</a>
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Содержимое-сборок.html">Содержимое сборок</a>
@@ -104,10 +106,10 @@
         <h1 class="u-text u-text-default u-text-1">Сборки Windows 8.1</h1>
         <h6 class="u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-2">Windows 8.1 V3 by Adderly (24.06.2022)<br>
         </h6>
-        <img class="u-image u-image-default u-image-1" src="images/photo_2022-06-10_23-18-31.jpg" alt="" data-image-width="1280" data-image-height="719">
-        <img class="u-image u-image-default u-image-2" src="images/photo_2022-06-10_23-18-314.jpg" alt="" data-image-width="1280" data-image-height="719">
-        <img class="u-image u-image-default u-image-3" src="images/photo_2022-06-10_23-18-312.jpg" alt="" data-image-width="1280" data-image-height="719">
-        <img class="u-image u-image-default u-image-4" src="images/photo_2022-06-10_23-18-313.jpg" alt="" data-image-width="1280" data-image-height="719">
+        <img class="u-expanded-width-xs u-image u-image-default u-image-1" src="images/Windows8.xx64-2022-06-24-14-05-36.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-expanded-width-xs u-image u-image-default u-image-2" src="images/Windows8.xx64-2022-06-24-14-06-58.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-expanded-width-xs u-image u-image-default u-image-3" src="images/Windows8.xx64-2022-06-24-14-05-31.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-expanded-width-xs u-image u-image-default u-image-4" src="images/Windows8.xx64-2022-06-24-14-06-06.png" alt="" data-image-width="1366" data-image-height="768">
         <p class="u-text u-text-default u-text-3"> Сборка обновлена до Update 3 <br>
           <br>Добавлена папка KMS <br>
           <br>Добавлена папка "от Марка Аддерли" в которой находятся инсталяторы самых нужных и авторских программ<br>
@@ -121,11 +123,11 @@
           <br>Добавлен диспетчер задач в ПКМ по рабочему столу (по желанию можно отключить)<br>
           <br>Удалены файлы гибернации, и файла подкачки <br>
           <br>Ключ - GCRJD-8NW9H-F2CDX-CCM8D-9D6T9 <br>
-          <br>Образ весит 4.74 GB, после установки Windows занимает 15 GB. <br>
-          <br>Образ основан на официальном MSDN Windows 8.1.
+          <br>Образ весит 5.23 GB, после установки Windows занимает 14 GB. <br>
+          <br>Образ основан на официальном MSDN Windows 8.1.<br>После первой перезагрузки после установки, нажмите просто ENTER.
         </p>
-        <a href="https://drive.google.com/file/d/1n5snBowFHWvQDoxpNV2G1GPa_RHGzmVX/view?usp=sharing" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-13 u-hover-custom-color-14 u-radius-50 u-btn-1">Скачать Windows 8.1 V2 by Adderly</a>
-        <a href="http://www.mediafire.com/file/a9wo007m4w5qlf2/Windows_8.1_V2_by_Adderly.iso" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-hover-black u-radius-50 u-btn-2">Альтернативная ссылка</a>
+        <a href="https://drive.google.com/file/d/10ParZ14nvBfrVMtURo-Cb12-_Fn3lOzS/view?usp=sharing" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-13 u-hover-custom-color-14 u-radius-50 u-btn-1" target="_blank">Скачать Windows 8.1 V3 by Adderly</a>
+        <a href="https://www.mediafire.com/file/pasdhkistf8i3em/Windows_8.1_V3_by_Adderly.iso/file" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-hover-black u-radius-50 u-btn-2" target="_blank">Альтернативная ссылка</a>
         <p class="u-text u-text-default u-text-4">Смотрите так же:</p>
         <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-3">Сборки Windows 10</a>
         <a href="Windows-8-0-сборки.html" data-page-id="256727684" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-4">Сборки Windows 8.0</a>
