--- a/Windows-7-сборки.html
+++ b/Windows-7-сборки.html
@@ -62,6 +62,7 @@
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-8-1-сборки.html">Сборки Windows 8.1</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-10-сборки.html">Сборки Windows 10</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-11-сборки.html">Сборки Windows 11</a>
+</li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-Lite-сборки.html">Сборки Windows Lite</a>
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="Содержимое-сборок.html" style="padding: 10px 20px;">Содержимое сборок</a>
@@ -83,6 +84,7 @@
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-8-1-сборки.html">Сборки Windows 8.1</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-10-сборки.html">Сборки Windows 10</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-11-сборки.html">Сборки Windows 11</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-Lite-сборки.html">Сборки Windows Lite</a>
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Содержимое-сборок.html">Содержимое сборок</a>
@@ -122,8 +124,8 @@
           <br>Образ весит 3.90 GB, после установки Windows занимает 11.4 GB. <br>
           <br>Образ основан на официальном MSDN Windows 7.
         </p>
-        <a href="https://drive.google.com/file/d/1qijTiQv1ZGjT_A3ubJtlxBLZw50I4W2x/" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-12 u-hover-custom-color-13 u-radius-50 u-btn-1">Скачать Windows 7 V2 by Adderly</a>
-        <a href="http://www.mediafire.com/file/21quihilqhtkr5q/Windows_7_V2_by_Adderly.iso" class="u-active-grey-50 u-border-none u-btn u-btn-round u-button-style u-hover-black u-radius-50 u-btn-2">Альтернативная ссылка</a>
+        <a href="https://drive.google.com/file/d/1qijTiQv1ZGjT_A3ubJtlxBLZw50I4W2x/" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-12 u-hover-custom-color-13 u-radius-50 u-btn-1" target="_blank">Скачать Windows 7 V2 by Adderly</a>
+        <a href="http://www.mediafire.com/file/21quihilqhtkr5q/Windows_7_V2_by_Adderly.iso" class="u-active-grey-50 u-border-none u-btn u-btn-round u-button-style u-hover-black u-radius-50 u-btn-2" target="_blank">Альтернативная ссылка</a>
         <p class="u-text u-text-default u-text-4">Смотрите так же:</p>
         <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-3">Сборки Windows 8.1</a>
         <a href="Windows-8-0-сборки.html" data-page-id="256727684" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-4">Сборки Windows 8.0</a>
