--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-8-1-сборки.html">Сборки Windows 8.1</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-10-сборки.html">Сборки Windows 10</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-11-сборки.html">Сборки Windows 11</a>
+</li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-Lite-сборки.html">Сборки Windows Lite</a>
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="Содержимое-сборок.html" style="padding: 10px 20px;">Содержимое сборок</a>
@@ -83,6 +84,7 @@
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-8-1-сборки.html">Сборки Windows 8.1</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-10-сборки.html">Сборки Windows 10</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-11-сборки.html">Сборки Windows 11</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-Lite-сборки.html">Сборки Windows Lite</a>
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Содержимое-сборок.html">Содержимое сборок</a>
@@ -106,28 +108,29 @@
           </span>
           <br>
         </h3>
+        <p class="u-text u-text-default u-text-2">Новинки</p>
         <a href="Windows-7-сборки.html" data-page-id="95331361" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-12 u-radius-50 u-btn-1">Сборки Windows 7</a>
         <a href="Windows-Lite-сборки.html" data-page-id="1517191" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-5 u-radius-50 u-btn-2">Windows Lite сборки</a>
-        <p class="u-text u-text-default u-text-2">Новинка</p>
-        <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-13 u-radius-50 u-btn-3">Сборки Windows 8.1</a>
+        <a href="Windows-8-0-сборки.html" data-page-id="256727684" class="u-border-none u-btn u-btn-round u-button-style u-palette-1-dark-1 u-radius-50 u-btn-3">Windows 8.0 by Adderly</a>
         <a href="Windows-8-0-сборки.html" data-page-id="256727684" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-14 u-radius-50 u-btn-4">Сборки Windows 8.0</a>
-        <a href="Windows-8-0-сборки.html" data-page-id="256727684" class="u-btn u-button-style u-btn-5">Windows 8.0 by Adderly</a>
+        <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-13 u-radius-50 u-btn-5">Сборки Windows 8.1</a>
         <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-16 u-radius-50 u-btn-6">Сборки Windows 10</a>
         <a href="Windows-11-сборки.html" data-page-id="54493442" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-radius-50 u-btn-7">Сборки Windows 11</a>
+        <a href="Windows-8-0-сборки.html" data-page-id="256727684" class="u-border-none u-btn u-btn-round u-button-style u-palette-1-dark-1 u-radius-50 u-btn-8">Windows 8.1 V3 by Adderly</a>
         <p class="u-text u-text-3">Попробовав мои сборки, вы измените мнение о том,<br>что все сборки ужасны. 
         </p>
         <p class="u-text u-text-default u-text-4">Сайт новый, может содержать ошибки.</p>
         <p class="u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-5">В разработке:</p>
         <p class="u-text u-text-default u-text-6">Windows 11 by Adderly</p>
         <p class="u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-7">Мои соц. сети</p>
-        <a href="https://t.me/adderlyev" class="u-border-none u-btn u-button-style u-palette-1-base u-btn-8">Личный блог в Telegram</a>
-        <a href="https://t.me/adderlywindows" class="u-border-none u-btn u-button-style u-palette-1-base u-btn-9">Telegram канал, о сборках</a>
-        <a href="https://t.me/finework" class="u-border-none u-btn u-button-style u-palette-1-base u-btn-10">Telegram канал моей компании</a>
-        <a href="https://www.youtube.com/channel/UCkZGHAAwJelXw_HgQ_kq0YQ?" class="u-border-none u-btn u-button-style u-custom-color-5 u-btn-11">Мой личный YouTube канал</a>
-        <a href="https://www.youtube.com/channel/UCeb6IN4z_B1qYA7CKouMIrQ" class="u-border-none u-btn u-button-style u-custom-color-5 u-btn-12">YouTube канал моей компании</a>
-        <a href="https://tiktok.com/@igroman255" class="u-black u-border-none u-btn u-button-style u-btn-13">Тик ток моего очень хорошего друга</a>
-        <a href="https://www.tiktok.com/@pepsya_kotya" class="u-black u-btn u-button-style u-btn-14">Мой личный TikTok</a>
-        <a href="https://www.donationalerts.com/r/finework" class="u-border-none u-btn u-button-style u-palette-3-base u-btn-15">Поддержать меня и FineWork</a>
+        <a href="https://t.me/adderlyev" class="u-border-none u-btn u-button-style u-palette-1-base u-btn-9">Личный блог в Telegram</a>
+        <a href="https://t.me/adderlywindows" class="u-border-none u-btn u-button-style u-palette-1-base u-btn-10">Telegram канал, о сборках</a>
+        <a href="https://t.me/finework" class="u-border-none u-btn u-button-style u-palette-1-base u-btn-11">Telegram канал моей компании</a>
+        <a href="https://www.youtube.com/channel/UCkZGHAAwJelXw_HgQ_kq0YQ?" class="u-border-none u-btn u-button-style u-custom-color-5 u-btn-12">Мой личный YouTube канал</a>
+        <a href="https://www.youtube.com/channel/UCeb6IN4z_B1qYA7CKouMIrQ" class="u-border-none u-btn u-button-style u-custom-color-5 u-btn-13">YouTube канал моей компании</a>
+        <a href="https://tiktok.com/@igroman255" class="u-black u-border-none u-btn u-button-style u-btn-14">Тик ток моего очень хорошего друга</a>
+        <a href="https://www.tiktok.com/@pepsya_kotya" class="u-black u-btn u-button-style u-btn-15">Мой личный TikTok</a>
+        <a href="https://www.donationalerts.com/r/finework" class="u-border-none u-btn u-button-style u-palette-3-base u-btn-16">Поддержать меня и FineWork</a>
       </div>
     </section>
     
