--- a/Контакты.html
+++ b/Контакты.html
@@ -62,6 +62,7 @@
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-8-1-сборки.html">Сборки Windows 8.1</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-10-сборки.html">Сборки Windows 10</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-11-сборки.html">Сборки Windows 11</a>
+</li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-Lite-сборки.html">Сборки Windows Lite</a>
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="Содержимое-сборок.html" style="padding: 10px 20px;">Содержимое сборок</a>
@@ -83,6 +84,7 @@
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-8-1-сборки.html">Сборки Windows 8.1</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-10-сборки.html">Сборки Windows 10</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-11-сборки.html">Сборки Windows 11</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-Lite-сборки.html">Сборки Windows Lite</a>
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Содержимое-сборок.html">Содержимое сборок</a>
