--- a/Софт-от-Аддерли.html
+++ b/Софт-от-Аддерли.html
@@ -110,7 +110,7 @@
         <a href="https://github.com/FineWorkCompany/sborkiadderly.github.io/raw/gh-pages/soft/2015-2022%2064.exe" class="u-border-none u-btn u-button-style u-grey-70 u-hover-grey-50 u-btn-2">Microsoft Visual C++ Redistributable<br>2015 - 2022 x64
         </a>
         <a href="https://github.com/FineWorkCompany/sborkiadderly.github.io/raw/gh-pages/soft/ndp472-kb4054531-web.exe" class="u-border-none u-btn u-button-style u-grey-70 u-hover-grey-50 u-btn-3">NET.Framework 4.7.2</a>
-        <a href="https://github.com/FineWorkCompany/sborkiadderly.github.io/raw/gh-pages/soft/NDP46-KB3045560-Web.exe" class="u-border-none u-btn u-button-style u-grey-70 u-hover-grey-50 u-btn-4">NET.Framework 4.6</a>
+        <a href="https://github.com/FineWorkCompany/sborkiadderly.github.io/raw/gh-pages/soft/NDP46-KB3045560-Web.exe" class="u-align-center-xs u-border-none u-btn u-button-style u-grey-70 u-hover-grey-50 u-btn-4">NET.Framework 4.6</a>
         <a href="https://github.com/FineWorkCompany/sborkiadderly.github.io/raw/gh-pages/soft/StartupSoundChanger.exe" class="u-border-none u-btn u-button-style u-grey-70 u-hover-grey-50 u-btn-5">Startup Sound Changer</a>
         <a href="https://github.com/FineWorkCompany/sborkiadderly.github.io/raw/gh-pages/soft/CCleaner_v5.90.9443.exe" class="u-border-none u-btn u-button-style u-grey-70 u-hover-grey-50 u-btn-6">CCleaner Professional</a>
         <a href="https://github.com/FineWorkCompany/sborkiadderly.github.io/raw/gh-pages/soft/Recuva_v1.53.0.2078.exe" class="u-border-none u-btn u-button-style u-grey-70 u-hover-grey-50 u-btn-7">Recuva</a>
@@ -123,10 +123,9 @@
         <a href="https://drive.google.com/file/d/1rPFRGKIuqOjSll6CvmUKKDPxcrT-5YhV/view?usp=sharing" class="u-border-none u-btn u-button-style u-grey-70 u-hover-grey-50 u-btn-14">Adobe Photoshop CC 2018</a>
         <a href="https://drive.google.com/file/d/1mPassPGEyslV7HNBthTw03ec6aenpqMJ/view?usp=sharing" class="u-border-none u-btn u-button-style u-grey-70 u-hover-grey-50 u-btn-15">Camtasia Studio Pro</a>
         <a href="https://drive.google.com/file/d/1K9HdKh53d7GRXdCVv0xufj3gZQK6g0Sv/view?usp=sharing" class="u-border-none u-btn u-button-style u-grey-70 u-hover-grey-50 u-btn-16">EaseUS Partition Master Unlimited</a>
-        <a href="https://drive.google.com/file/d/1SqzFt8013bQbyvy576Tj4h-v5P6Lqrcg/view?usp=sharing" class="u-border-none u-btn u-button-style u-grey-70 u-hover-grey-50 u-btn-17">uTorrent Pro</a>
-        <a href="https://drive.google.com/file/d/1uaX1XAuYq6SLEMLmU9ZDo79ce6stDlKj/view?usp=sharing" class="u-border-none u-btn u-button-style u-grey-70 u-hover-grey-50 u-btn-18">UltraISO Premium</a>
-        <a href="https://drive.google.com/file/d/1WE7UQCKkDAAskluf59fvCwABEZMUaodO/view?usp=sharing" class="u-border-none u-btn u-button-style u-grey-70 u-hover-grey-50 u-btn-19">Visual Studio 2022</a>
-        <h2 class="u-align-center-xl u-text u-text-2">Скоро еще больше репаков...</h2>
+        <a href="https://drive.google.com/file/d/1bk30x-_BZcn14YMHMa184DD3hXs3sYm8/view?usp=sharing" class="u-border-none u-btn u-button-style u-grey-70 u-hover-grey-50 u-btn-17">uTorrent Pro и&nbsp;UltraISO Premium</a>
+        <a href="https://drive.google.com/file/d/1WE7UQCKkDAAskluf59fvCwABEZMUaodO/view?usp=sharing" class="u-border-none u-btn u-button-style u-grey-70 u-hover-grey-50 u-btn-18">Visual Studio 2022</a>
+        <h2 class="u-align-center-xl u-text u-text-2">Пароль на архив - 1111</h2>
         <h5 class="u-align-center-xl u-text u-text-3">Все что здесь на странице, находится так же в открытом доступе в Интернете.<br>Автор этих репаков, не автор сайта!
         </h5>
       </div>
