--- a/Windows-11-сборки.html
+++ b/Windows-11-сборки.html
@@ -107,9 +107,7 @@
         </h1>
         <h1 class="u-align-center u-text u-text-default u-text-2">Уже до конца недели!</h1>
         <p class="u-text u-text-3"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы полезных и авторских программ,<br>а так же рег файлы, чтобы вернуть старый просмотрщик фото и&nbsp;чтобы отключать и включать обновления.&nbsp;<br>
-          <br>Удалены из автозагрузки One Drive<br>
-          <br>Удалены приложения<br>"Zune, Your Phone, Xbox Speech To Text, Sound Recorder, Карты,<br>Центр отзывов, Почта, Люди, Камера, Sticky Notes, Microsoft Solitaire Collection,<br>Office Hub, Get Started, Get Help, Погода, Новости, Microsoft To Do"<br>
-          <br> Удален OneDrive<br>
+          <br>&nbsp;Удален OneDrive<br>
           <br>Интегрированы Microsoft Visual Studio Redistributable 2005, 2008, 2010, 2012, 2013, 2015 - 2022, x86 и x64 <br>
           <br>Интегрированы Framework 4.8, 4.7.2, 3.5, 3.0, 2.0<br>
           <br>Включён DirectPlay <br>
