--- a/Софт-от-Аддерли.html
+++ b/Софт-от-Аддерли.html
@@ -47,7 +47,7 @@
         <p class="u-enable-responsive u-text u-text-default u-text-1">
           <a class="u-btn u-button-link u-button-style u-none u-text-body-alt-color u-btn-1" href="Сборки-от-Аддерли.html" data-page-id="25875748">Сборки от Аддерли</a>
         </p>
-        <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
+        <nav class="u-menu u-menu-dropdown u-menu-1">
           <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px;">
             <a class="u-button-style u-custom-active-color u-custom-border-color u-custom-color u-custom-hover-color u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-text-hover-color u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#">
               <svg class="u-svg-link" viewBox="0 0 24 24"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu-hamburger"></use></svg>
@@ -125,7 +125,7 @@
         <a href="https://drive.google.com/file/d/1K9HdKh53d7GRXdCVv0xufj3gZQK6g0Sv/view?usp=sharing" class="u-border-none u-btn u-button-style u-grey-70 u-hover-grey-50 u-btn-16">EaseUS Partition Master Unlimited</a>
         <a href="https://drive.google.com/file/d/1bk30x-_BZcn14YMHMa184DD3hXs3sYm8/view?usp=sharing" class="u-border-none u-btn u-button-style u-grey-70 u-hover-grey-50 u-btn-17">uTorrent Pro и&nbsp;UltraISO Premium</a>
         <a href="https://drive.google.com/file/d/1WE7UQCKkDAAskluf59fvCwABEZMUaodO/view?usp=sharing" class="u-border-none u-btn u-button-style u-grey-70 u-hover-grey-50 u-btn-18">Visual Studio 2022</a>
-        <h2 class="u-align-center-xl u-text u-text-2">Пароль на архив - 1111</h2>
+        <h2 class="u-align-center-xl u-text u-text-2">Пароль на архивы - 1111</h2>
         <h5 class="u-align-center-xl u-text u-text-3">Все что здесь на странице, находится так же в открытом доступе в Интернете.<br>Автор этих репаков, не автор сайта!
         </h5>
       </div>
