--- a/Windows-11-сборки.html
+++ b/Windows-11-сборки.html
@@ -105,7 +105,12 @@
       <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-text u-text-default u-text-1">Сборки Windows 11<br>
         </h1>
-        <h1 class="u-align-center u-text u-text-default u-text-2">Уже до конца недели!</h1>
+        <h6 class="u-text u-text-default u-text-2">Windows 11 21H2 by Adderly (24.06.2022)<br>
+        </h6>
+        <img class="u-expanded-width-xs u-image u-image-default u-image-1" src="images/Windows10x64-2022-06-25-00-19-36.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-expanded-width-xs u-image u-image-default u-image-2" src="images/Windows10x64-2022-06-25-00-19-05.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-expanded-width-xs u-image u-image-default u-image-3" src="images/Windows10x64-2022-06-25-00-20-13.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-expanded-width-xs u-image u-image-default u-image-4" src="images/Windows10x64-2022-06-25-00-20-27.png" alt="" data-image-width="1366" data-image-height="768">
         <p class="u-text u-text-3"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы полезных и авторских программ,<br>а так же рег файлы, чтобы вернуть старый просмотрщик фото и&nbsp;чтобы отключать и включать обновления.&nbsp;<br>
           <br>&nbsp;Удален OneDrive<br>
           <br>Интегрированы Microsoft Visual Studio Redistributable 2005, 2008, 2010, 2012, 2013, 2015 - 2022, x86 и x64 <br>
@@ -113,14 +118,17 @@
           <br>Включён DirectPlay <br>
           <br>Отключён Windows Media Player <br>(по желанию можно вернуть) <br>
           <br>Добавлен диспетчер задач в ПКМ по рабочему столу (по желанию можно выключить)<br>
-          <br>Образ весит x.xx GB, после установки Windows занимает xx GB<br>
-          <br>Образ основан на официальном MSDN Windows 11 21H2 (22000.132)<br>(Основана на старой, чтобы вы обновились сами. Сделано это для того, чтобы работали параметры реестра для того, чтобы обойти проверку.)
+          <br>Образ весит 6.22 GB, после установки Windows занимает 21 GB<br>
+          <br>Образ основан на официальном MSDN Windows 11 21H2 (22000.132)<br>(Основана на старой, чтобы вы обновились сами. Сделано это для того, чтобы работали параметры реестра для того, чтобы обойти проверку.)<br>
         </p>
-        <a href="Как-обойти-проверку-Windows-11.html" data-page-id="89124304" class="u-border-none u-btn u-btn-round u-button-style u-palette-2-base u-radius-50 u-btn-1">Как обойти проверку Windows 11</a>
-        <p class="u-text u-text-default u-text-4">Смотрите так же:</p>
-        <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-2">Сборки Windows 10</a>
-        <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-3">Сборки Windows 8.1</a>
-        <a href="Windows-7-сборки.html" data-page-id="95331361" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-4">Сборки Windows 7</a>
+        <h5 class="u-align-center u-text u-text-default u-text-4">Имеются проблемы с настройкой раскладки при первоначальной настройке,<br>это будет исправлено максимально быстро, возможно на следующей неделе.<br>Настроить раскладку все равно можно уже после настройки! (на 3 фото показано как)<br>Очень скоро будет создана V2.
+        </h5>
+        <a href="https://drive.google.com/file/d/1tsYc2vccfqvVffzMSxqkUCs0dT2jMhJc/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-12 u-radius-50 u-btn-1" target="_blank">Скачать Windows 11 21H2 by Adderly</a>
+        <a href="Как-обойти-проверку-Windows-11.html" data-page-id="89124304" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-4 u-radius-50 u-btn-2">Как обойти проверку Windows 11</a>
+        <p class="u-text u-text-default u-text-5">Смотрите так же:</p>
+        <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-3">Сборки Windows 10</a>
+        <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-4">Сборки Windows 8.1</a>
+        <a href="Windows-7-сборки.html" data-page-id="95331361" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-5">Сборки Windows 7</a>
       </div>
     </section>
     
