--- a/Сборки-от-Аддерли.html
+++ b/Сборки-от-Аддерли.html
@@ -121,7 +121,7 @@
         </p>
         <p class="u-text u-text-default u-text-4">Сайт новый, может содержать ошибки.</p>
         <p class="u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-5">В разработке:</p>
-        <p class="u-text u-text-default u-text-6">Windows 11 by Adderly</p>
+        <p class="u-text u-text-default u-text-6">Windows 11 by Adderly V2</p>
         <p class="u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-7">Мои соц. сети</p>
         <a href="https://t.me/adderlyev" class="u-border-none u-btn u-button-style u-palette-1-base u-btn-9">Личный блог в Telegram</a>
         <a href="https://t.me/adderlywindows" class="u-border-none u-btn u-button-style u-palette-1-base u-btn-10">Telegram канал, о сборках</a>
